feat: Adiciona novas funcionalidades e melhorias nos módulos de cotação, pedidos e fornecedores. Inclui refatorações, atualizações de dependências e melhorias na usabilidade da interface.