@@ -2,15 +2,23 @@ package com.gestordecompras.gestorcomprasbackend.mapper;
 
 import com.gestordecompras.gestorcomprasbackend.dto.cotacao.CotacaoCreateDTO;
 import com.gestordecompras.gestorcomprasbackend.dto.cotacao.CotacaoDTO;
+import com.gestordecompras.gestorcomprasbackend.dto.cotacao.CotacaoItemDTO;
 import com.gestordecompras.gestorcomprasbackend.model.cotacao.Cotacao;
-import com.gestordecompras.gestorcomprasbackend.model.pedido.ItemPedido;
+import com.gestordecompras.gestorcomprasbackend.model.cotacao.CotacaoItem;
 import org.springframework.stereotype.Component;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Component
 public class CotacaoMapper {
+
+    private final CotacaoItemMapper cotacaoItemMapper;
+
+    public CotacaoMapper(CotacaoItemMapper cotacaoItemMapper) {
+        this.cotacaoItemMapper = cotacaoItemMapper;
+    }
 
     public CotacaoDTO toDTO(Cotacao cotacao) {
         if (cotacao == null) {
@@ -28,12 +36,17 @@ public class CotacaoMapper {
             nomeFornecedor = cotacao.getFornecedorServico().getRazaoSocial();
         }
 
-        // Extrair IDs dos itens do pedido
-        List<Long> itensPedidoIds = cotacao.getItensPedido() != null
-                ? cotacao.getItensPedido().stream()
-                    .map(ItemPedido::getId)
+        // Mapear itens com preços individuais (novo formato)
+        List<CotacaoItemDTO> itensDTO = cotacao.getItens() != null
+                ? cotacao.getItens().stream()
+                    .map(cotacaoItemMapper::toDTO)
                     .collect(Collectors.toList())
-                : List.of();
+                : Collections.emptyList();
+
+        // Extrair IDs dos itens para compatibilidade (legacy)
+        List<Long> itensPedidoIds = itensDTO.stream()
+                .map(CotacaoItemDTO::itemPedidoId)
+                .collect(Collectors.toList());
 
         // Calcular quantidade de anexos
         // Priorizar a nova estrutura de anexos múltiplos, caso contrário usar o campo legado
@@ -54,13 +67,20 @@ public class CotacaoMapper {
                 tipoFornecedor,
                 nomeFornecedor,
                 cotacao.getSolicitacaoDePedido() != null ? cotacao.getSolicitacaoDePedido().getId() : null,
-                itensPedidoIds,
-                cotacao.getPreco(),
+                itensPedidoIds, // Legacy: apenas IDs
+                itensDTO, // Novo: itens completos com preços
+                cotacao.getPreco(), // Calculado automaticamente a partir dos itens
                 cotacao.getPrazoEmDiasUteis(),
                 cotacao.getDataLimite(),
                 cotacao.getCaminhoAnexo(),
                 temAnexo,
-                quantidadeAnexos
+                quantidadeAnexos,
+                // Campos de auditoria
+                cotacao.getFoiEditada(),
+                cotacao.getNumeroVersao(),
+                cotacao.getDataUltimaEdicao(),
+                cotacao.getMotivoUltimaEdicao(),
+                cotacao.getEditadoPor()
         );
     }
 
@@ -70,10 +90,18 @@ public class CotacaoMapper {
         }
 
         Cotacao cotacao = new Cotacao();
-        cotacao.setPreco(cotacaoCreateDTO.preco());
+
+        // Campos comuns
         cotacao.setPrazoEmDiasUteis(cotacaoCreateDTO.prazoEmDiasUteis());
         cotacao.setDataLimite(cotacaoCreateDTO.dataLimite());
         cotacao.setAnexoPdf(cotacaoCreateDTO.anexoPdf());
+
+        // Legacy: setPreco só é usado se estiver no formato antigo
+        if (!cotacaoCreateDTO.usaNovoFormato() && cotacaoCreateDTO.preco() != null) {
+
+        }
+
+        // Nota: itens, fornecedor e solicitacaoDePedido são setados manualmente no service
 
         return cotacao;
     }
